argocd/media-server/wrapperr/manifests/sts.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: wrapperr
  name: wrapperr
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: wrapperr
  template:
    metadata:
      labels:
        app: wrapperr
    spec:
      restartPolicy: Always
      containers:
        - image: ghcr.io/aunefyren/wrapperr:v3.2.10@sha256:d6d384bb504d43fab2b05030d06c42a0f5bcbca3743e7401af2b7eef549c3431
          imagePullPolicy: IfNotPresent
          name: wrapperr
          ports:
            - containerPort: 8282
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 8282
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 8282
            initialDelaySeconds: 60
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            limits:
              cpu: 250m
              memory: 1Gi
            requests:
              cpu: 250m
              memory: 1Gi
          volumeMounts:
            - mountPath: /app/config
              name: wrapperr-config
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: wrapperr-config
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: truenas-hdd-nfs
        resources:
          requests:
            storage: 1Gi
