argocd/media-server/wrapperr/manifests/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wrapperr
  name: wrapperr
spec:
  ports:
    - name: "http"
      port: 8282
      targetPort: 8282
  selector:
    app: wrapperr
