argocd/media-server/wrapperr/manifests/netpol.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: wrapperr
spec:
  endpointSelector:
    matchLabels:
      app: wrapperr
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "8282"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: plex
            app: plex
      toPorts:
        - ports:
            - port: "32400"
              protocol: TCP
